--- a/react-ts/src/views/dashboard/index.less
+++ b/react-ts/src/views/dashboard/index.less
@@ -1,31 +1,347 @@
-// [class~='ant-col'] {
-// 	background: transparent;
-// 	border: 0;
-// }
+.card {
+	border: 0px;
+	border-radius: 0px;
+	margin-bottom: 24px;
+	-webkit-transition: .5s;
+	transition: .5s;
+	-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.035);
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.035);
+	background: #f0f0f0;
 
-// [class~='ant-col']>div {
-// 	height: 120px;
-// 	font-size: 14px;
-// 	line-height: 120px;
-// 	background: #f3f6f8;
-// 	border-radius: 4px;
-// }
+	.card-header {
+		display: -webkit-box;
+		display: flex;
+		-webkit-box-pack: justify;
+		justify-content: space-between;
+		-webkit-box-align: center;
+		align-items: center;
+		padding: 15px 24px;
+		background-color: transparent;
+		border-bottom: 1px solid rgba(77, 82, 89, 0.07);
+		font-size: 16px;
+	}
 
-// pre {
-// 	padding: 8px 16px;
-// 	font-size: 13px;
-// 	background: #f9f9f9;
-// 	border-radius: 6px;
-// }
+	.card-body {
+		padding: 24px;
+	}
 
-// pre.demo-code {
-// 	direction: ltr;
-// }
+	.card-body>*:last-child {
+		margin-bottom: 0;
+	}
 
-// .ant-col {
-// 	padding: 0;
-// }
+	.card-body>p:last-child {
+		margin-bottom: 0;
+	}
 
-// [data-theme="dark"] [class~='ant-col']>div {
-// 	background: #f3f4f5;
-// }
+	.card-bordered {
+		border: 1px solid #2a3239;
+	}
+
+	.card-shadowed,
+	.card-hover-shadow:hover {
+		-webkit-box-shadow: 0 0 25px rgba(0, 0, 0, 0.07);
+		box-shadow: 0 0 25px rgba(0, 0, 0, 0.07);
+	}
+
+	.card-footer {
+		background-color: #fcfdfe;
+		border-top: 1px solid rgba(77, 82, 89, 0.07);
+		padding: 15px 24px;
+	}
+}
+
+.ant-col {
+	padding: 0;
+}
+
+/* 徽章 */
+.badge {
+	-weikit-border-radius: 2px;
+	border-radius: 2px;
+	font-weight: 300;
+}
+
+.badge-pill {
+	-weikit-border-radius: 10rem;
+	border-radius: 10rem;
+}
+
+.badge-primary {
+	background-color: #33cabb;
+}
+
+a.badge-primary:hover,
+a.badge-primary:focus {
+	background-color: #52d3c7;
+}
+
+.badge-success {
+	background-color: #15c377;
+}
+
+a.badge-success:hover,
+a.badge-success:focus {
+	background-color: #16d17f;
+}
+
+.badge-info {
+	background-color: #48b0f7;
+}
+
+a.badge-info:hover,
+a.badge-info:focus {
+	background-color: #65bdf8;
+}
+
+.badge-warning {
+	color: #fff;
+	background-color: #faa64b;
+}
+
+a.badge-warning:hover,
+a.badge-warning:focus {
+	background-color: #fbb264;
+}
+
+.badge-danger {
+	background-color: #f96868;
+}
+
+a.badge-danger:hover,
+a.badge-danger:focus {
+	background-color: #fa8181;
+}
+
+.badge-dark {
+	background-color: #465161;
+}
+
+a.badge-dark:hover,
+a.badge-dark:focus {
+	background-color: #515d70;
+}
+
+.badge-secondary {
+	background-color: #e4e7ea;
+	color: #4d5259;
+}
+
+a.badge-secondary:hover,
+a.badge-secondary:focus {
+	color: #4d5259;
+	background-color: #edeff1;
+}
+
+.badge-purple {
+	background-color: #926dde;
+	color: #fff;
+}
+
+a.badge-purple:hover,
+a.badge-purple:focus {
+	color: #fff;
+	background-color: #a282e3;
+}
+
+.badge-pink {
+	background-color: #f96197;
+	color: #fff;
+}
+
+a.badge-pink:hover,
+a.badge-pink:focus {
+	color: #fff;
+	background-color: #fa75a4;
+}
+
+.badge-cyan {
+	background-color: #57c7d4;
+	color: #fff;
+}
+
+a.badge-cyan:hover,
+a.badge-cyan:focus {
+	color: #fff;
+	background-color: #77d2dc;
+}
+
+.badge-yellow {
+	background-color: #fcc525;
+	color: #fff;
+}
+
+a.badge-yellow:hover,
+a.badge-yellow:focus {
+	color: #fff;
+	background-color: #fdd04d;
+}
+
+.badge-brown {
+	background-color: #8d6658;
+	color: #fff;
+}
+
+a.badge-brown:hover,
+a.badge-brown:focus {
+	color: #fff;
+	background-color: #9d7162;
+}
+
+a.badge-light:hover,
+a.badge-light:focus {
+	background-color: #F3F4F6;
+}
+
+a.badge:focus,
+a.badge.focus {
+	box-shadow: none;
+}
+
+.badge-muted {
+	color: #fff;
+	background-color: #8b95a5;
+}
+
+a.badge-muted:hover,
+a.badge-muted:focus {
+	color: #fff;
+	background-color: #97A1AF;
+}
+
+a.badge-muted:focus,
+a.badge-muted.focus {
+	box-shadow: none;
+}
+
+[class*='badge-outline-'] {
+	position: relative;
+	border: 1px solid #ebebeb;
+	color: #4d5259;
+	font-size: 12px;
+}
+
+[class*='badge-outline-']:before {
+	content: "";
+	margin-right: 5px;
+	width: 8px;
+	height: 8px;
+	display: inline-block;
+	-wekit-border-radius: 50%;
+	border-radius: 50%;
+}
+
+.badge-outline-default::before {
+	background-color: #f5f6f7;
+}
+
+.badge-outline-primary::before {
+	background-color: #33cabb;
+}
+
+.badge-outline-success::before {
+	background-color: #15c377;
+}
+
+.badge-outline-info::before {
+	background-color: #48b0f7;
+}
+
+.badge-outline-warning::before {
+	background-color: #faa64b;
+}
+
+.badge-outline-danger::before {
+	background-color: #f96868;
+}
+
+.badge-outline-dark::before {
+	background-color: #465161;
+}
+
+.badge-outline-secondary::before {
+	background-color: #e4e7ea;
+}
+
+.badge-outline-purple::before {
+	background-color: #926dde;
+}
+
+.badge-outline-pink::before {
+	background-color: #f96197;
+}
+
+.badge-outline-cyan::before {
+	background-color: #57c7d4;
+}
+
+.badge-outline-yellow::before {
+	background-color: #fcc525;
+}
+
+.badge-outline-brown::before {
+	background-color: #8d6658;
+}
+
+/* 淡一点的颜色 */
+.badge-primary-light {
+	background-color: rgba(51, 202, 187, .15);
+	color: #33cabb;
+}
+
+.badge-success-light {
+	background-color: rgba(21, 195, 119, .15);
+	color: #15c377;
+}
+
+.badge-info-light {
+	background-color: rgba(72, 176, 247, .15);
+	color: #48b0f7;
+}
+
+.badge-warning-light {
+	background-color: rgba(250, 166, 75, .15);
+	color: #faa64b;
+}
+
+.badge-danger-light {
+	background-color: rgba(249, 104, 104, .15);
+	color: #f96868;
+}
+
+.badge-purple-light {
+	background-color: rgba(146, 109, 222, .15);
+	color: #926dde;
+}
+
+.badge-brown-light {
+	background-color: rgba(141, 102, 88, .15);
+	color: #8d6658;
+}
+
+/* 圆点 */
+.badge-dot {
+	padding: 0px;
+	width: 8px;
+	height: 8px;
+	-webkit-border-radius: 100%;
+	border-radius: 100%;
+}
+
+.badge-dot:empty {
+	display: inline-block;
+}
+
+.badge-dot-sm {
+	width: 6px;
+	height: 6px;
+}
+
+.badge-dot-lg {
+	width: 10px;
+	height: 10px;
+}
+
+.badge-dot-xl {
+	width: 12px;
+	height: 12px;
+}
